Initial code cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,59 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <div class="controls">
-            Size: <input class="setting" type="number" value="3" id="size" />
-            <button id="undo"> Undo </button>
-            <button id="redo"> Redo </button>
-            <button id="shuffle"> Shuffle </button>
-            <button id="solve" disabled="true"> Solve </button>
-        </div>
-        <div class="content">
-            <canvas id="render"></canvas>
+        <div class="vbox">
+            <div class="buttons">
+                <button id="undo"> Undo </button>
+                <button id="redo"> Redo </button>
+                <button id="shuffle"> Shuffle </button>
+                <button id="solve" disabled="true"> Solve </button>
+            </div>
+            <div class="hbox">
+                <div id="settingsContainer">
+                    <div class="settings">
+                        <div class="section">
+                            <div class="header"> Cube Settings </div>
+                            <div class="setting">
+                                <div class="label"> Size </div>
+                                <input type="number" value="3" id="size" />
+                            </div>
+                            <div class="setting">
+                                <div class="label"> Animation Speed </div>
+                                <input type="range" value="0.5" id="speed"
+                                    min="0" max="1" step="0.01" />
+                            </div>
+                        </div>
+                        <div class="section">
+                            <div class="header"> Camera </div>
+                            <div class="setting">
+                                <div class="label"> Zoom </div>
+                                <input type="range" value="0.5" id="zoom"
+                                    min="0.2" max="1" step="0.01" />
+                            </div>
+                            <div class="setting">
+                                <div class="label"> Perspective </div>
+                                <input type="range" value="0.5" id="fov"
+                                    min="0.1" max="1" step="0.01" />
+                            </div>
+                        </div>
+                        <div class="section">
+                            <div class="header"> Lighting </div>
+                            <div class="setting">
+                                <div class="label"> Fade </div>
+                                <input type="range" value="0.2" id="lightFade"
+                                    min="0" max="1" step="0.01" />
+                            </div>
+                            <div class="setting">
+                                <div class="label"> Shininess </div>
+                                <input type="range" value="0.5" id="shininess"
+                                    min="0" max="1" step="0.01" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="expand"></div>
+                <canvas id="render"></canvas>
+            </div>
         </div>
     </body>
 </html>
