Add error reporting

--- a/public/index.html
+++ b/public/index.html
@@ -60,5 +60,11 @@
                 <canvas id="render"></canvas>
             </div>
         </div>
+        <div id="errorContainer">
+            <div class="errorBox">
+                Error:
+                <div id="errorMessage"></div>
+            </div>
+        </div>
     </body>
 </html>
