Added move count and timer

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,10 @@
                 </div>
                 <div id="expand"></div>
                 <canvas id="render"></canvas>
+                <div class="status">
+                    Moves: <span id="moves">--</span>
+                    Time: <span id="time">--</span>
+                </div>
             </div>
         </div>
         <div id="errorContainer">
