--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <body>
         <div class="vbox">
             <div class="buttons">
+                <button id="reset"> Reset </button>
                 <button id="undo"> Undo </button>
                 <button id="redo"> Redo </button>
                 <button id="shuffle"> Shuffle </button>
