Added cube solving

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
                 <button id="undo"> Undo </button>
                 <button id="redo"> Redo </button>
                 <button id="shuffle"> Shuffle </button>
-                <button id="solve" disabled="true"> Solve </button>
+                <button id="solve"> Solve </button>
             </div>
             <div class="hbox">
                 <div id="settingsContainer">
@@ -30,7 +30,7 @@
                             </div>
                         </div>
                         <div class="section">
-                            <div class="header"> Camera </div>
+                            <div class="header"> Graphics </div>
                             <div class="setting">
                                 <div class="label"> Zoom </div>
                                 <input type="range" value="0.5" id="zoom"
@@ -45,13 +45,8 @@
                         <div class="section">
                             <div class="header"> Lighting </div>
                             <div class="setting">
-                                <div class="label"> Fade </div>
+                                <div class="label"> Light Fade </div>
                                 <input type="range" value="0.2" id="lightFade"
-                                    min="0" max="1" step="0.01" />
-                            </div>
-                            <div class="setting">
-                                <div class="label"> Shininess </div>
-                                <input type="range" value="0.5" id="shininess"
                                     min="0" max="1" step="0.01" />
                             </div>
                         </div>
