--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
                 <button id="redo"> Redo </button>
                 <button id="shuffle"> Shuffle </button>
                 <button id="solve"> Solve </button>
+                <button id="testSolver"> Test Solver </button>
             </div>
             <div class="hbox">
                 <div id="settingsContainer">
