--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <title> Rubiks </title>
         <script src="bundle.js"></script>
         <link rel="stylesheet" href="style.css" />
+        <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     </head>
     <body>
         <div class="vbox">
@@ -26,7 +27,7 @@
                             </div>
                             <div class="setting">
                                 <div class="label"> Animation Speed </div>
-                                <input type="range" value="0.5" id="speed"
+                                <input type="range" value="0.75" id="speed"
                                     min="0" max="1" step="0.01" />
                             </div>
                         </div>
@@ -47,7 +48,7 @@
                             <div class="header"> Lighting </div>
                             <div class="setting">
                                 <div class="label"> Light Fade </div>
-                                <input type="range" value="0.2" id="lightFade"
+                                <input type="range" value="0.5" id="lightFade"
                                     min="0" max="1" step="0.01" />
                             </div>
                         </div>
